# QiuckEx

./: VERIFICATION_CHECKLIST.md  pnpm-lock.yaml
.github/workflows/: backend.yml  contract.yml
.turbo/cache/: 97131f257b58c831-meta.json  97131f257b58c831.tar.zst  da82eafc647f5721-meta.json  da82eafc647f5721.tar.zst
app/backend/: .env.example  CONTRIBUTING.md  README.md  jest.config.js  package-lock.json  package.json  tsconfig.build.tsbuildinfo
app/backend/src/: app.module.ts  app.spec.ts  main.ts
app/backend/src/config/: app-config.service.ts  env.schema.ts
app/backend/src/links/: links.controller.ts  links.service.ts
app/backend/src/transactions/: CACHE_DOCUMENTATION.md  horizon.service.advanced.spec.ts  horizon.service.spec.ts  horizon.service.ts  (+1 more)
app/contract/: CONTRIBUTING.md  Cargo.toml  README.md
app/contract/contracts/qiuck_silver_contract/: Cargo.toml
app/contract/contracts/qiuck_silver_contract/src/: lib.rs  privacy.rs  test.rs
app/contract/contracts/qiuck_silver_contract/test_snapshots/test/: test_create_escrow.1.json
app/contract/contracts/quickex/src/: admin.rs  errors.rs  escrow.rs  events.rs  lib.rs  privacy.rs  test.rs
app/contract/contracts/quickex/test_snapshots/test/: test_deposit_with_commitment_fails_when_paused.1.json  test_double_withdrawal_fails.1.json  test_event_snapshot_admin_changed_schema.1.json  test_event_snapshot_escrow_deposited_schema.1.json  test_get_commitment_state_pending.1.json  test_get_commitment_state_spent.1.json  test_get_escrow_details_found.1.json  test_get_escrow_details_spent_status.1.json  test_invalid_amount_fails.1.json  test_successful_withdrawal.1.json  test_upgrade_by_admin.1.json  test_verify_proof_view_spent_commitment.1.json  test_verify_proof_view_valid.1.json  test_verify_proof_view_wrong_amount.1.json  test_verify_proof_view_wrong_owner.1.json
app/frontend/: package-lock.json  package.json
app/mobile/__tests__/: Home.test.tsx
app/mobile/app/: wallet-connect.tsx
(+11 files in other folders)
